@startuml "PersonApp"
skinparam ClassAttributeIconSize 0

class AskUser {
    - personController : PersonController
    - personStringFormatter : IPersonStringFormatter
    - csvParserDictionary : Dictionary<string, IPersonCsvParser>

    + AskUser(personController : PersonController,\n\
        personStringFormatter : IPersonStringFormatter,\n\
        csvParserDictionary : Dictionary<string, IPersonCsvParser>)

    + AskUserToLoadCsvFileOrChangeCsvParser() : void
    + AskUserToChooseCsvParser() : void
    + AskUserForCsvFilePath() : void
    + AskUserToSelectPeopleFilterOption() : void
    + AskUserToLoadMoreCsvOrSelectAnotherFilterOption() : void
    + PrintPeople(people : List<Person>) : void
}

interface IPersonStringFormatter <<interface>> {
    + GetPersonFormattedString(person : Person) : string
}

class PersonStringFormatter {
    + GetPersonFormattedString(person : Person) : string
}

class PersonController {
    - personContext : IPersonContext
    - personCsvParser : IPersonCsvParser

    + PersonController(personContext : IPersonContext, \n\
        personCsvParser : IPersonCsvParser)

    + SetPersonCsvParser(personCsvParser : IPersonCsvParser) : void

    + LoadPeopleFromCsvFile(filepath : string) : void

    + GetPeopleWithCompanyNameContainingEsq() : List<Person>
    + GetPeopleWithCountyDerbyshire() : List<Person>
    + GetPeopleWithThreeDigitHouseNumber() : List<Person>
    + GetPeopleWithUrlLongerThan35Characters() : List<Person>
    + GetPeopleWithSingleDigitPostcodeArea() : List<Person>
    + GetPeopleWithFirstPhoneNumberLargerThanSecondPhoneNumber() : List<Person>
}

interface IPersonContext <<intereface>> {
    + GetPeople() : List<Person>
    + AddPeople(people : List<Person>) : void
}

class PersonContext {
    + GetPeople() : List<Person>
    + AddPeople(people : List<Person>) : void
}

interface IPersonCsvParser <<interface>> {
    + Parse(filepath : string) : List<Person>
}

class SimplePersonCsvParser {
    + Parse(filepath : string) : List<Person>
}

class Person {
    + Id : int
    + FirstName : string
    + LastName : string
    + Comapny : string
    + Address : string
    + City : string
    + County : string
    + Postal : string
    + Phone1 : string
    + Phone2 : string
    + Email : string
    + Web : string
}

AskUser o-- PersonController
AskUser o-- IPersonStringFormatter
AskUser o-- IPersonCsvParser

IPersonStringFormatter <|.. PersonStringFormatter

PersonController o-- IPersonContext
PersonController o-- IPersonCsvParser

IPersonContext <|.. PersonContext
IPersonContext ---> Person

IPersonCsvParser <|.. SimplePersonCsvParser
IPersonCsvParser ---> Person

@enduml